# Club-Digital-Bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
ClubDigital/: bot.py  main.py  metrics.py
ClubDigital/cogs/: project.py  stats.py  test.py
ClubDigital/models/: __init__.py  base.py  project.py  user.py
alembic/: env.py
alembic/versions/: 081b34133b62_added_some_fields.py  14178e5f49de_added_a_field_to_save_role_id.py  2d5ba9d3d16e_added_leader_role_field.py  5021e4647900_.py  8a7bc48b7ec6_.py  8bf9075654b1_basic_models.py  aab46fd9fb09_added_a_repo_field.py  d41bffbd864e_initial_state.py  ebb867d435b9_.py  ec196f00eb3b_initial_version.py  ec4d48ee046e_added_repos.py
