[tool.poetry]
name = "discord-projektbot"
version = "0.1.0"
description = ""
authors = ["Stefan Schmelz <stefan_schmelz@gmx.net>"]
readme = "README.md"
packages = [{include = "discord_projektbot"}]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.2.2"
dotenvy = "^0.2.0"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
